<resources>
    <string name="app_name">Musical Structure</string>
    <string name="recently_played">Recently played</string>
    <string name="downloads">Downloads</string>
    <string name="favorites">Favorites</string>
    <string name="my_playlist">My playlists</string>
    <string name="my_music">My music</string>
    <string name="player">Player</string>
    <string name="online">Online music</string>
    <string name="now_playing">Now Playing</string>
    <string name="song_name">Song Name</string>
    <string name="timer">0:00</string>
    <string name="current_music">Current Music</string>
    <string name="go_online">Go Online</string>
    <string name="artist">Artist</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="user">User Name</string>
    <string name="splash">Musical Structure</string>
    <string name="loading">Online Content Loading Please Wait....</string>


</resources>
