<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ListView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="8dp"
        android:orientation="vertical"
        android:id="@+id/list">
    </ListView>
    <LinearLayout
        android:id="@+id/Now_playing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="#616161"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/alb"
            android:layout_weight="2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/music" />
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/now_playing"
                android:textColor="#FFFFFF"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/sng"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/song_name"
                android:textColor="#FFFFFF"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <TextView
                android:id="@+id/arti"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/artist"
                android:textColor="#FFFFFF"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
        <ImageView
            android:layout_weight="1"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:adjustViewBounds="true"
            android:src="@drawable/next" />
    </LinearLayout>
</LinearLayout>