<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="#616161"
    android:orientation="vertical">
        <ImageView
            android:id="@+id/Alb_art"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:src="@drawable/music"
            tools:ignore="InvalidId" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/timePos"
                    android:layout_width="0dp"
                    android:textColor="#FFFFFF"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/timer" />
                <TextView
                    android:id="@+id/timeDur"
                    android:textColor="#FFFFFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timer" />
            </LinearLayout>
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/song"
                    android:layout_weight="0.7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_music"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FFFFFF"
                    android:layout_marginBottom="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/go_online"
                    android:layout_gravity="center_vertical"
                    android:textColor="#FFFFFF"/>
                <ImageButton
                    android:id="@+id/go_online"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:scaleType="fitCenter"
                    android:background="#00ffffff"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_weight="0.1"
                    android:src="@drawable/goonline"/>
            </LinearLayout>
            <TextView
                android:id="@+id/artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artist"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="2"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:adjustViewBounds="true"
                android:src="@drawable/shuffle" />
            <ImageView
                android:layout_weight="2"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:adjustViewBounds="true"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/back"/>
            <ImageView
                android:id="@+id/play"
                android:layout_weight="2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:adjustViewBounds="true"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/play"/>
            <ImageView
                android:layout_weight="2"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:adjustViewBounds="true"
                android:src="@drawable/next" />
            <ImageView
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/library"
                android:layout_weight="2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:adjustViewBounds="true"
                android:src="@drawable/library" />
        </LinearLayout>
</LinearLayout>